feat: Refactor main.py to use scraper and notifier modules; add config and Procfile for environment variables and deployment

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
+
 playwright
 python-telegram-bot
-schedule
-dotenv
+python-dotenv
+
+# Para instalar los browsers de Playwright (ejecutar después de instalar dependencias):
+# python -m playwright install
