--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,108 @@
-# Python
+# Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
+*$py.class
 *.pyo
 *.pyd
 *.pyc
+
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Environment variables
 *.env
 .env
+.envrc
 venv/
 ENV/
-.envrc
+env/
+.venv
+env.bak/
+venv.bak/
 
-# macOS
-.DS_Store
-
-# VS Code
-.vscode/
-
-# Logs
-*.log
-
-# Others
-*.sqlite3
-*.db
-*.bak
-*.swp
-*.swo
-
-# Pipenv
-Pipfile.lock
-
-# Jupyter
-.ipynb_checkpoints/
-
-# Test coverage
+# Unit test / coverage reports
 htmlcov/
+.tox/
+.nox/
 .coverage
 .coverage.*
 .cache
 nosetests.xml
 coverage.xml
 *.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+test-results/
+
+# Logs
+*.log
+logs/
+
+# macOS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# VS Code / IDEs
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Databases
+*.sqlite3
+*.db
+*.bak
+
+# Jupyter Notebook
+.ipynb_checkpoints/
+
+# Pipenv
+Pipfile.lock
 
 # Migrations
 migrations/
+
+# Playwright specific
+playwright-report/
+playwright/.cache/
+screenshots/
+videos/
+
+# Heroku specific
+.heroku/
+
+# Temporary files
+*.tmp
+*.temp
+
+# Local development files
+.local/
+.cache/
